@@ -1,5 +1,5 @@
 /*
- * "$Id: classes.c,v 1.34.2.15 2003/04/25 15:30:19 mike Exp $"
+ * "$Id: classes.c,v 1.34.2.16 2003/04/26 17:19:41 mike Exp $"
  *
  *   Printer class routines for the Common UNIX Printing System (CUPS).
  *
@@ -215,7 +215,7 @@ DeletePrinterFromClasses(printer_t *p)	/* I - Printer to delete */
 
     if ((c->type & (CUPS_PRINTER_CLASS | CUPS_PRINTER_IMPLICIT)) &&
         c->num_printers == 0)
-      DeletePrinter(c);
+      DeletePrinter(c, 1);
   }
 }
 
@@ -236,7 +236,7 @@ DeleteAllClasses(void)
     next = c->next;
 
     if (c->type & CUPS_PRINTER_CLASS)
-      DeletePrinter(c);
+      DeletePrinter(c, 0);
   }
 }
 
@@ -675,5 +675,5 @@ SaveAllClasses(void)
 
 
 /*
- * End of "$Id: classes.c,v 1.34.2.15 2003/04/25 15:30:19 mike Exp $".
+ * End of "$Id: classes.c,v 1.34.2.16 2003/04/26 17:19:41 mike Exp $".
  */
