@@ -3,6 +3,8 @@ CHANGES-1.1.txt
 
 CHANGES IN CUPS V1.1.19rc3
 
+	- Updated the French man pages (translation provided by
+	  Gilles QUERRET)
 	- The scheduler would delete all printers from
 	  printers.conf if a job was active when a HUP signal
 	  was handled (STR #47)
